# gitlab-issue-visualizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: classes.drawio
gliv/: __init__.py  app.py  classes.py  download.py  graph.py  render.py  run_all.py  testing_utils.py
mock/: data.py
model/: classes.drawio  classes.py
settings/: config.example.toml
src/: __init__.py  app.py  download.py  graph.py  inplaceoperations.py  render.py  run_all.py  utils.py
