[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "gliv"
version = "1.0.0"
description = "Visualizer of GitLab issue graphs."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]
license = { file = "LICENSE" }
authors = [
    { name = "Jennifer Krieger", email = "mail@jenniferkrieger.de" },
    { name = "Erik Altermann", email = "halloerik95@gmail.com" },
    { name = "Michael Osthege", email = "michael.osthege@outlook.com" },
]
maintainers = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["gliv*"]

[tool.pytest.ini_options]
xfail_strict=true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 140
ignore-init-module-imports = true

[tool.coverage.run]
omit = [
    # exclude tests files from coverage calculation
    "**/test*.py",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    'test_.*?\.py$',
]
